--- a/client/src/components/SearchCharacter/SearchCharacter.styles.module.css
+++ b/client/src/components/SearchCharacter/SearchCharacter.styles.module.css
@@ -29,6 +29,10 @@
   text-align: center;
 }
 
+.goldText {
+  color: gold;
+}
+
 .searchRow {
   display: flex;
   flex-direction: row;
